<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignInActivity">

    <LinearLayout
        android:id="@+id/loadingWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/pink"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/darkPink" />

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/navyBlue"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/siginWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/img10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/signin_welcome"
            android:textColor="@color/navyBlue"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/google_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/darkGreen"
            android:drawableLeft="@drawable/google_logo"
            android:padding="4dp"
            android:text="@string/signin_action" />
    </LinearLayout>

</LinearLayout>