<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flex="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProductDetailsActivity">

    <ImageView
        android:id="@+id/productDetailsImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/product_details_image_alt"
        android:scaleType="centerCrop"
        android:src="@drawable/img01" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/productDetailsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="name"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDetailsPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="£ 23.69"
                android:textColor="@color/darkGreen"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDetailsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineHeight="24sp"
                android:text="description"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/productDetailsSeeWeather"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/design_default_color_on_primary"
                    android:text="@string/product_details_see_weather" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/productDetailsSeeMyLocation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/design_default_color_on_primary"
                    android:text="@string/product_details_see_my_location" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>